| Summary: | ASTERISK-20239: JabberSend only accepts recipients that contain '2' instead of '@' | ||
| Reporter: | Gregory Porras (gporras) | Labels: | |
| Date Opened: | 2012-08-15 21:26:50 | Date Closed: | 2012-08-17 21:01:07 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_xmpp |
| Versions: | 11.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | res_xmpp.c typo on line 1751 in strchr test at end of if(). Looks like it should have been checking for '@', not '2' | ||
| Comments: | |||